--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "bin": "./release/command/index.js",
   "description": "TBD",
   "exports": {
+    "./test": {
+      "import": "./release/esmodule/test/index.js",
+      "require": "./release/commonjs/test/index.cjs"
+    },
     "./package.json": "./package.json"
   },
   "files": [
@@ -12,6 +16,18 @@
     "makefile",
     "release/command",
     "release/library",
+    "release/commonjs/test/library/create-random-id.cjs",
+    "release/commonjs/test/library/create-random-id.cjs.map",
+    "release/commonjs/test/library/path-compare.cjs",
+    "release/commonjs/test/library/path-compare.cjs.map",
+    "release/commonjs/test/index.cjs",
+    "release/commonjs/test/index.cjs.map",
+    "release/esmodule/test/library/create-random-id.js",
+    "release/esmodule/test/library/create-random-id.js.map",
+    "release/esmodule/test/library/path-compare.js",
+    "release/esmodule/test/library/path-compare.js.map",
+    "release/esmodule/test/index.js",
+    "release/esmodule/test/index.js.map",
     "source/esmodule/test/library/create-random-id.js",
     "source/esmodule/test/library/path-compare.js"
   ],
@@ -24,26 +40,26 @@
   "type": "module",
   "version": "0.0.26-87",
   "dependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.9",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.16.11",
-    "@virtualpatterns/babel-plugin-mablung-replace-identifier": "0.0.26-90",
-    "@virtualpatterns/babel-plugin-mablung-replace-string-literal": "0.0.26-88",
-    "@virtualpatterns/babel-preset-mablung-makefile": "0.0.26-146",
-    "@virtualpatterns/eslint-config-mablung-makefile": "0.0.26-141",
-    "@virtualpatterns/mablung-makefile": "0.0.26-288",
-    "commander": "^9.1.0",
-    "fs-extra": "^10.0.1",
+    "@babel/preset-env": "^7.18.6",
+    "@virtualpatterns/babel-plugin-mablung-replace-identifier": "0.0.26-92",
+    "@virtualpatterns/babel-plugin-mablung-replace-string-literal": "0.0.26-90",
+    "@virtualpatterns/babel-preset-mablung-makefile": "0.0.26-154",
+    "@virtualpatterns/eslint-config-mablung-makefile": "0.0.26-149",
+    "@virtualpatterns/mablung-makefile": "0.0.26-300",
+    "commander": "^9.3.0",
+    "fs-extra": "^10.1.0",
     "json5": "^2.2.1",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@pwn/is": "^1.0.2",
-    "@virtualpatterns/mablung-check-dependency": "0.0.26-123",
-    "@virtualpatterns/mablung-worker": "0.0.2-125",
-    "ava": "^4.2.0",
-    "sinon": "^13.0.1",
+    "@virtualpatterns/mablung-check-dependency": "0.0.26-125",
+    "@virtualpatterns/mablung-worker": "0.0.2-129",
+    "ava": "^4.3.0",
+    "sinon": "^14.0.0",
     "shx": "^0.3.4"
   }
 }
